--- a/README.adoc
+++ b/README.adoc
@@ -42,4 +42,10 @@ If your project is built using another build tool that uses the Maven Central re
 == Specifications
 The implementation is based on the following specifications:
 
-- https://msdn.microsoft.com/en-us/library/cc246482.aspx[\[MS-SMB2\]: Server Message Block (SMB) Protocol Versions 2 and 3]
+- https://msdn.microsoft.com/en-us/library/cc246482.aspx[[MS-SMB2\]: Server Message Block (SMB) Protocol Versions 2 and 3]
+- https://msdn.microsoft.com/en-us/library/cc247021.aspx[[MS-SPNG\]: Simple and Protected GSS-API Negotiation Mechanism (SPNEGO) Extension]
+- https://msdn.microsoft.com/en-us/library/cc236621.aspx[[MS-NLMP\]: NT LAN Manager (NTLM) Authentication Protocol]
+- https://msdn.microsoft.com/en-us/library/cc230273.aspx[[MS-DTYP\]: Windows Data Types]
+- https://msdn.microsoft.com/en-us/library/cc231196.aspx[[MS-ERREF\]: Windows Error Codes]
+- https://msdn.microsoft.com/en-us/library/cc231987.aspx[[MS-FSCC\]: File System Control Codes]
+
