--- a/README.adoc
+++ b/README.adoc
@@ -6,6 +6,7 @@ Jeroen van Erp
 
 To get started, have a look at one of the examples. Hopefully you will find the API pleasant to work with :)
 
+image::https://api.bintray.com/packages/hierynomus/maven/smbj/images/download.svg[link="https://bintray.com/hierynomus/maven/smbj/_latestVersion"]
 image:https://travis-ci.org/hierynomus/smbj.svg?branch=master["Build Status", link="https://travis-ci.org/hierynomus/smbj"]
 image:https://badge.waffle.io/hierynomus/smbj.svg?label=ready&title=Ready["Issues in Ready", link="http://waffle.io/hierynomus/smbj"]
 image:https://api.codacy.com/project/badge/Grade/ae8ba8e308734bfbab92fa226853ce91["Codacy code quality", link="https://www.codacy.com/app/jeroen_2/smbj?utm_source=github.com&utm_medium=referral&utm_content=hierynomus/smbj&utm_campaign=Badge_Grade"]
