--- a/README.adoc
+++ b/README.adoc
@@ -50,3 +50,7 @@ The implementation is based on the following specifications:
 - https://msdn.microsoft.com/en-us/library/cc231196.aspx[[MS-ERREF\]: Windows Error Codes]
 - https://msdn.microsoft.com/en-us/library/cc231987.aspx[[MS-FSCC\]: File System Control Codes]
 
+== Stress Test Tools
+Look at the following links for some tools to aid in stress testing your SMB implmentations:
+
+Stress Test File:https://github.com/NinjaChris16/smbj/blob/master/StressTests.md[Docs]
