--- a/README.adoc
+++ b/README.adoc
@@ -53,4 +53,4 @@ The implementation is based on the following specifications:
 == Stress Test Tools
 Look at the following links for some tools to aid in stress testing your SMB implmentations:
 
-Stress Test File:https://github.com/NinjaChris16/smbj/blob/master/StressTests.md[Docs]
+Stress Test File:https://github.com/NinjaChris16/smbj/blob/master/StressTests.md
