--- a/README.adoc
+++ b/README.adoc
@@ -51,6 +51,5 @@ The implementation is based on the following specifications:
 - https://msdn.microsoft.com/en-us/library/cc231987.aspx[[MS-FSCC\]: File System Control Codes]
 
 == Stress Test Tools
-Look at the following links for some tools to aid in stress testing your SMB implmentations:
-
-Stress Test File:https://github.com/NinjaChris16/smbj/blob/master/StressTests.md
+Look at the following documentation for some tools to aid in stress testing your SMB implmentations:
+https://github.com/NinjaChris16/smbj/blob/master/StressTests.md[Stress Tests]
