--- a/README.adoc
+++ b/README.adoc
@@ -21,6 +21,69 @@ And, if you want, you can also run the SMBJ examples.
 
 Binary releases of SMBJ are not provided here, but you can download it http://search.maven.org/#artifactdetails%7C{smbj_groupid}%7Csmbj%7C{smbj_version}%7Cjar[straight from the Maven Central repository] if you want to.
 
+== Examples
+
+A - Listing Files on a Share/Folder
+
+```java
+
+    SMBClient client = new SMBClient();
+
+    try (Connection connection = client.connect("SERVERNAME")) {
+        AuthenticationContext ac = new AuthenticationContext("USERNAME", "PASSWORD".toCharArray(), "DOMAIN");
+        Session session = connection.authenticate(ac);
+
+        // Connect to Share
+        try (DiskShare share = (DiskShare) session.connectShare("SHARENAME")) {
+            for (FileIdBothDirectoryInformation f : share.list("FOLDER", "*.TXT")) {
+                System.out.println("File : " + f.getFileName());
+            }
+        }
+    }
+
+```
+
+B - Deleting a file
+
+```java
+
+    SMBClient client = new SMBClient(config);
+
+    try (Connection connection = client.connect("SERVERNAME")) {
+        AuthenticationContext ac = new AuthenticationContext("USERNAME", "PASSWORD".toCharArray(), "DOMAIN");
+        Session session = connection.authenticate(ac);
+
+        // Connect to Share
+        try (DiskShare share = (DiskShare) session.connectShare("SHARENAME")) {
+            share.rm("FILE");
+        }
+    }
+
+```
+
+C - Adjusting Timeout and Socket Timeout
+
+```java
+
+    SmbConfig config = SmbConfig.builder()
+            .withTimeout(120, TimeUnit.SECONDS) // Timeout sets Read, Write, and Transact timeouts (default is 60 seconds)
+            .withSoTimeout(180, TimeUnit.SECONDS) // Socket Timeout (default is 0 seconds, blocks forever)
+            .build();
+                
+    SMBClient client = new SMBClient(config);
+
+    try (Connection connection = client.connect("SERVERNAME")) {
+        AuthenticationContext ac = new AuthenticationContext("USERNAME", "PASSWORD".toCharArray(), "DOMAIN");
+        Session session = connection.authenticate(ac);
+
+        // Connect to Share
+        try (DiskShare share = (DiskShare) session.connectShare("SHARENAME")) {
+            ... 
+        }
+    }
+
+```
+
 == Depending on SMBJ
 If you're building your project using Maven, you can add the following dependency to the `pom.xml`:
 
