--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,12 @@ Jeroen van Erp
 
 To get started, have a look at one of the examples. Hopefully you will find the API pleasant to work with :)
 
-image:https://api.bintray.com/packages/hierynomus/maven/smbj/images/download.svg[link="https://bintray.com/hierynomus/maven/smbj/_latestVersion"] image:https://travis-ci.org/hierynomus/smbj.svg?branch=master["Build Status", link="https://travis-ci.org/hierynomus/smbj"] image:https://api.codacy.com/project/badge/Grade/ae8ba8e308734bfbab92fa226853ce91["Codacy code quality", link="https://www.codacy.com/app/jeroen_2/smbj?utm_source=github.com&utm_medium=referral&utm_content=hierynomus/smbj&utm_campaign=Badge_Grade"] image:https://javadoc-emblem.rhcloud.com/doc/com.hierynomus/smbj/badge.svg["Javadoc",link="http://www.javadoc.io/doc/com.hierynomus/smbj"] image:https://maven-badges.herokuapp.com/maven-central/com.hierynomus/smbj/badge.svg["Maven Central",link="https://maven-badges.herokuapp.com/maven-central/com.hierynomus/smbj"]
+image:https://api.bintray.com/packages/hierynomus/maven/smbj/images/download.svg[link="https://bintray.com/hierynomus/maven/smbj/_latestVersion"]
+image:https://travis-ci.org/hierynomus/smbj.svg?branch=master["Build Status", link="https://travis-ci.org/hierynomus/smbj"]
+image:https://api.codacy.com/project/badge/Grade/ae8ba8e308734bfbab92fa226853ce91["Codacy code quality", link="https://www.codacy.com/app/jeroen_2/smbj?utm_source=github.com&utm_medium=referral&utm_content=hierynomus/smbj&utm_campaign=Badge_Grade"]
+image:https://codecov.io/gh/hierynomus/smbj/branch/master/graph/badge.svg["codecov", link="https://codecov.io/gh/hierynomus/smbj"]
+image:https://javadoc-emblem.rhcloud.com/doc/com.hierynomus/smbj/badge.svg["Javadoc",link="http://www.javadoc.io/doc/com.hierynomus/smbj"]
+image:https://maven-badges.herokuapp.com/maven-central/com.hierynomus/smbj/badge.svg["Maven Central",link="https://maven-badges.herokuapp.com/maven-central/com.hierynomus/smbj"]
 
 image:https://www.ej-technologies.com/images/product_banners/jprofiler_small.png["Java profiler", link="http://www.ej-technologies.com/products/jprofiler/overview.html"]
 
@@ -69,7 +74,7 @@ C - Adjusting Timeout and Socket Timeout
             .withTimeout(120, TimeUnit.SECONDS) // Timeout sets Read, Write, and Transact timeouts (default is 60 seconds)
             .withSoTimeout(180, TimeUnit.SECONDS) // Socket Timeout (default is 0 seconds, blocks forever)
             .build();
-                
+
     SMBClient client = new SMBClient(config);
 
     try (Connection connection = client.connect("SERVERNAME")) {
@@ -78,7 +83,7 @@ C - Adjusting Timeout and Socket Timeout
 
         // Connect to Share
         try (DiskShare share = (DiskShare) session.connectShare("SHARENAME")) {
-            ... 
+            ...
         }
     }
 
